# smiles2iupac

./: .gitignore  ADR-007-iupac-roadmap.md  README.ja.md  README.md  SETUP.md  pyproject.toml  smiles2iupac_handoff.md
.claude/: settings.local.json
docs/: opsin_skip_list.md
src/smiles2iupac/: __init__.py  _cli.py  chain_finder.py  constants.py  functional_group.py  group_namers.py  heterocycle_handler.py  iupac_result.py  iupac_verdict.py  molecule_analyzer.py  name_assembler.py  polycyclic_handler.py  pubchem.py  ring_handler.py  stereochemistry.py  substituent.py
tests/: conftest.py  pubchem_cache.json  pubchem_mismatch_report.txt  test_name_assembler.py  test_phase1.py  test_phase10.py  test_phase100.py  test_phase101.py  test_phase102.py  test_phase103.py  test_phase104.py  test_phase105.py  test_phase106.py  test_phase107.py  test_phase108.py  test_phase109.py  test_phase11.py  test_phase110.py  test_phase111.py  test_phase112.py  test_phase113.py  test_phase114.py  test_phase115.py  test_phase116.py  test_phase117.py  test_phase118.py  test_phase119.py  test_phase12.py  test_phase120.py  test_phase121.py  test_phase122.py  test_phase123.py  test_phase124.py  test_phase125.py  test_phase126.py  test_phase127.py  test_phase128.py  test_phase129.py  test_phase13.py  test_phase130.py  (+621 more)
