[project]
name = "smiles2iupac"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["rdkit>=2023.9"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smiles2iupac"]
